<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_plain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/plain_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/open_sans_regular"
            android:hint="@string/enter_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="#78909C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_plain_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_plain_text" />

        <TextView
            android:id="@+id/tv_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/key"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/edt_text"
            app:layout_constraintTop_toBottomOf="@+id/edt_text" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="25"
            app:labelBehavior="floating"
            app:layout_constraintEnd_toEndOf="@+id/edt_text"
            app:layout_constraintStart_toStartOf="@+id/edt_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_key" />

        <TextView
            android:id="@+id/tv_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/choose_method"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/edt_text"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_text"
            app:layout_constraintStart_toStartOf="@+id/edt_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_method"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/tv_title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/img_copy"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_result"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/img_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_copy"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_result"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_encryption_decryption"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/process"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/tv_result"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>